<resources>
    <string name="search_hint">Please enter location</string>
    <string name="search">Search</string>
    <string name="city">City</string>
    <string name="w_app">WApp</string>
    <string name="please_add_name">Please add location name</string>
    <string name="city_not_found">Location not found</string>
    <string name="selected_city">Selected city:</string>
    <string name="temperature">Temperature:</string>
    <string name="no_data">No data</string>
    <string name="celsius">%1$s c&#176;</string>
    <string name="hPa">%1$s hPa</string>
    <string name="humidity">Humidity:</string>
    <string name="hum">%1$s %%</string>
    <string name="pressure">Pressure:</string>
    <string name="temp_min">Temp min:</string>
    <string name="temp_max">Temp max:</string>
    <string name="outside">Outside:</string>
    <string name="generic_error">Something went wrong. Please try again</string>
    <string name="my_location">My location</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>
